--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # Fady Fawzy Comment: Flutter Version is 3.3.3
   cupertino_icons: ^1.0.5
+  # The Font Awesome Icon pack available as Flutter Icons.
+  # Provides 1600 additional icons to use in your apps.
+  font_awesome_flutter: ^10.2.1
   
 
 dev_dependencies:
